[package]
name = "arklib"
version = "0.1.0"
edition = "2021"

[lib]
name = "arklib"
crate-type = ["rlib"]
[dependencies]
log = { version = "0.4.14", features = ["release_max_level_off"] }
crc32fast = "1.3.0"
walkdir = "2.3.2"
anyhow = "1.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
canonical-path = "2.0.2"
image = "0.24.2"
pdf_render = { git = "https://github.com/pdf-rs/pdf_render" }
pdf = { git = "https://github.com/pdf-rs/pdf", features = ['threads'] }
pathfinder_rasterize = { git = "https://github.com/s3bk/pathfinder_rasterizer" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
[dev-dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
